Fix problem where the tabs were covering the department select box

--- a/public/stylesheets/_results.scss
+++ b/public/stylesheets/_results.scss
@@ -10,6 +10,7 @@
 .ui-tabs.fp-tabs {
   padding: 0;
   border: 0;
+  position: static;
   ul.ui-tabs-nav {
     background: transparent;
     border: 0;
@@ -36,6 +37,7 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
+      position: static;
       a {
         float: none;
         padding: 0;
